--- a/.github/workflows/pdf_to_image.yml
+++ b/.github/workflows/pdf_to_image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "Installing dependencies..."
-          pip install pdf2image tesseract-ocr pypdf2 leptonica
+          pip install pdf2image tesseract
 
       # Install poppler
       - name: Install poppler
