--- a/.github/workflows/pdf_to_image.yml
+++ b/.github/workflows/pdf_to_image.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Upload images
         run: |
-          git checkout master
+          git checkout -b test
           git add .
           git commit -m "Auto-generated PDF to image files"
-          git push origin main
+          git push
